--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <style>
 
+    /*
+       note: this pen has been tested with Mac emojis only, so your mileage may vary.
+             the html markup is not standard on purpose (I wanted to try something
+             a bit more React-like). 
+    */
+
     /* mini reset */
     * { margin: 0; padding: 0; pointer-events: none; box-sizing: border-box; }
     
-    /* numeric variable constant */
+    /* variable system */
     [d="0"]  { --d: 0; }
     [d="1"]  { --d: 1; }
     [d="2"]  { --d: 2; }
@@ -51,11 +57,6 @@
       width: 600px;
       left: 0px; right: 0px; 
       pointer-events: auto;
-      /* uncomment for debug only!
-      border: solid 1px rgba(255, 125, 112, 0.8);
-      border-style: dashed;
-      z-index: 1;
-     */
     }
     .top:before    { top:   0px; bottom: 350px; height: 250px; }
     .middle:before { top: 250px; bottom: 250px; height: 100px; }
@@ -85,7 +86,7 @@
     .bottom:hover .rocket > figure:before {
       transform: rotate(42deg) translate(150px, 100px) scale(5.0);
       z-index: 10;
-      filter: blur(1px); /* camera proximity blur */
+      /* filter: blur(1px); camera proximity blur is too CPU costly.. */
     }
 
     /* terrain */
@@ -93,7 +94,7 @@
       position: absolute;
       bottom: 0px;
       left: 0px;
-      width: 600px; /* use a large value to debug, otherwise, 600px */
+      width: 600px;
       height: 400px;
       overflow: hidden;
       box-shadow: 0px 30px 66px 43px white; /* critical part: atmosphere! */
